# git-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  npm-publish.yml  pypi-publish.yml  python.yml  release-please.yml  shellcheck.yml  test.yml
examples/: options.conf
hooks/: pre-commit
lib/: ai-common.sh
python/git_ai/: __init__.py  _gemini.py  _generate.py  _git.py  _ignore.py  _pr_draft.py  _pr_incremental.py  _pr_prompt_build.py  _pr_render.py  _pr_repo_cli.py  default-excludes.txt
python/git_ai/prompts/: commit.txt  pr-fallback-update.txt  pr-fallback.txt  pr-two-pass-update.txt  pr-two-pass.txt
test/helpers/: common.bash
test/lib/: choice_history.bats  die.bats  git_ai_ignore.bats  last_choice.bats  list_options.bats  order_by_recent.bats  pick_via_fzf.bats  provider_display_name.bats  resolve_model.bats  strip_fences.bats  tier_display_name.bats  user_options.bats  vertex_auth.bats
test/python/: test_gemini_client.py  test_generate_errors.py  test_generate_from_diff.py  test_generate_size_guard.py  test_git_utils.py  test_ignore.py  test_pr_draft.py  test_pr_incremental.py  test_pr_render.py  test_prompts.py  test_strip_fences.py
